=============================================================
Version 3.4.2
=============================================================

    - Feature: Integration of an internal toolbox with all Lengow information for support
    - Feature: Removal of compatibility with PrestaShop 1.5
    - Bugfix: Add compatibility with 1.7.8.1

=============================================================
Version 3.4.1
=============================================================

    - Bugfix: Add compatibility with 1.7.8

=============================================================
Version 3.4.0
=============================================================

    - Feature: Integration of order synchronization in the toolbox webservice
    - Feature: Retrieving the status of an order in the toolbox webservice
    - Feature: Removal of compatibility with PrestaShop 1.4

=============================================================
Version 3.3.2
=============================================================

    - Bugfix: [export] Correction of the GET selection parameter for export

=============================================================
Version 3.3.1
=============================================================

    - Feature: Outsourcing of the toolbox via webservice
    - Feature: Setting up a modal for the plugin update
    - Feature: Addition of the JSON field in the order template
    - Bugfix: Retrieving the main shop url for feed and cron urls

=============================================================
Version 3.3.0
=============================================================

    - Feature: Integration of the new connection process

=============================================================
Version 3.2.4
=============================================================

    - Feature: [import] Add compatibility with 1.7.7.x versions of PrestaShop
    - Bugfix: [import] Correction of the SQL query retrieving the product by an attribute value