@@ -298,7 +298,8 @@ es:
       checksum_help: "Algunos archivos han sido modificados por el cliente"
       plugin_information: "Información sobre el plugin"
       prestashop_version: "Versión de PrestaShop"
-      plugin_version: "Versión del plugin"
+      plugin_version: "Versión de plugin"
+      plugin_php_version: "Versión PHP"
       ip_server: "IP del servidor"
       authorized_ip_enable: "Autorización por IP habilitada"
       ip_authorized: "IP autorizada"
