@@ -299,6 +299,7 @@ fr:
       plugin_information: "Informations sur le plugin"
       prestashop_version: "Version du PrestaShop"
       plugin_version: "Version du plugin"
+      plugin_php_version: "Version du PHP"
       ip_server: "IP Serveur"
       authorized_ip_enable: "Autorisation par IP activée"
       ip_authorized: "IP autorisée(s)"
